--- a/environment.yml
+++ b/environment.yml
@@ -12,9 +12,9 @@ dependencies:
   - torchaudio=0.12.1
   - torchvision=0.13.1
   - tqdm
-# - tensorboard
-# - shutil
-# - scipy
+  - tensorboard
+  - shutil
+  - scipy
   - pip:
     - submodules/diff-gaussian-rasterization
     - submodules/simple-knn
